Async functionality added

--- a/views/tables.pug
+++ b/views/tables.pug
@@ -10,4 +10,6 @@ html
                 button(id="syncButton", class="button")
                     span.label Sync
 
-// Render tables bitch!                    
+        p !{Customers}
+        p !{Invoices}
+        p !{Bills}               
