tried fixing async

--- a/views/tables.pug
+++ b/views/tables.pug
@@ -3,7 +3,7 @@ html
     head
         style
             include style.css
-        title="Anirudh Homigo Challenge"
+        title="YHACK API"
     body
         h1="Quickbooks Data"
             a(href="http://localhost:3000/sync")
